Bug 601142: useless horizontal scrollbar always visible on show_bug.cgi in Classic skin r=LpSolit, a=LpSolit

--- a/skins/standard/show_bug.css
+++ b/skins/standard/show_bug.css
@@ -111,3 +111,6 @@ table#flags {
 .knob-buttons {
     float: right;
 }
+.bz_bug .bz_alias_short_desc_container {
+    width: inherit;
+}
